--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,11 @@ PAYTABS_PROFILE_ID=
 PAYTABS_SERVER_KEY=
 PAYTABS_BASE_URL=https://secure-egypt.paytabs.com
 PAYTABS_CHECKOUT_LANG=en
+# ============================================
+# Pushover Push Notifications
+# ============================================
+# Get your credentials from: https://pushover.net/
+# 1. Create an app/API token: https://pushover.net/apps/build
+# 2. Get your user key from: https://pushover.net/
+PUSHOVER_API_TOKEN=
+PUSHOVER_USER_KEY=
