--- a/.env.example
+++ b/.env.example
@@ -93,3 +93,4 @@ PAYTABS_CHECKOUT_LANG=en
 # 2. Get your user key from: https://pushover.net/
 PUSHOVER_API_TOKEN=
 PUSHOVER_USER_KEY=
+GEMINI_API_KEY=
