--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "filament/spatie-laravel-media-library-plugin": "^4.0",
         "filament/spatie-laravel-settings-plugin": "^4.0",
         "filament/spatie-laravel-tags-plugin": "^4.0",
+        "google-gemini-php/laravel": "^2.0",
         "lara-zeus/spatie-translatable": "^1.0",
         "laravel/fortify": "^1.30",
         "laravel/framework": "^12.0",
@@ -25,6 +26,7 @@
         "livewire/volt": "^1.7.0",
         "nwidart/laravel-modules": "^12.0",
         "prism-php/prism": "^0.82.0",
+        "spatie/fork": "^1.2",
         "spatie/laravel-permission": "^6.18",
         "stichoza/google-translate-php": "*"
     },
